--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 /.venv
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
